# streetpaper

./: README.md  setup.cfg
src/streetpaper/: __main__.py  version.py
