[metadata]
name = streetpaper
version = attr: streetpaper.version.__version__
url = https://codeberg.org/sunarch/streetpaper
project_urls =
    Bug Tracker = https://codeberg.org/sunarch/streetpaper/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Customer Service
    Intended Audience :: Other Audience
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Natural Language :: Hungarian
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Office/Business :: News/Diary
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = streetpaper - Street newspaper management
long_description = file: README.md
long_description_content_type = text/markdown
keywords = streetpaper, newspaper
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.10
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    streetpaper = streetpaper.__main__:main

[options.packages.find]
where = src
